<resources>
    <string name="app_name">Augie Athletics</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menSports">Men\'s Sports</string>
    <string name="menu_womenSports">Women\s Sports</string>
    <string name="menu_favorites">Favorite Teams</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="calendar">Calendar</string>
    <string name="favorite_team_list">Favorite Team List</string>
    <string name="channel_name">AugieAthletics</string>
    <string name="channel_description">Upcoming game</string>
    <string name="results">Past Games</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="home">Home</string>
    <string name="Credits_Text">Application Designed for Augustana College Athletics using Information from the Augustana Athletics Webpage.\n\nDevelopers:\nBryson Adcock, Kathryn Clark, Jenna Morgan, and Faisal Nawaz</string>
    <string name="augustana_athletics_image_content_desc">Augustana Athletics Image</string>
    <string name="roster">Roster</string>
    <string name="footer_image">Footer Image</string>


    <string-array name="mSports">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Cross Country</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Lacrosse</item>
        <item>Soccer</item>
        <item>Swimming and Diving</item>
        <item>Tennis</item>
        <item>Track and Field</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
        <item>Wrestling</item>
    </string-array>

    <string-array name="fSports">
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cross Country</item>
        <item>Golf</item>
        <item>Lacrosse</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Swimming and Diving</item>
        <item>Tennis</item>
        <item>Track and Field</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
        <item>Wrestling</item>
    </string-array>
</resources>
