<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_msport"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_menSports" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_Calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/calendar" />

    </group>
</menu>
